--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,10 @@ aside#sidebar{
 aside#sidebar input, aside#sidebar textarea{
   width: 90%;
   padding: 5px;
+  margin-bottom: 5px;
+}
+aside#sidebar #calp{
+  margin-bottom: 5px;
 }
 
 article#main-col{
